--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 html{
 font-size: 10px;
 font-family: 'Gloria Hallelujah';
-background-color: #E99643;
+background-color: black;
 }
 
 body{
 width: 800px;
 margin: 0 auto;
-background-color: #FF9500;
+background-color: #FF0000;
 padding: 0 20px 20px 20px;
 border: 5px solid black;
 }
